# Noice

./: LICENSE  README.md  settings.gradle
.github/workflows/: android.yml  noice.yml
app/: build.gradle
app/src/androidTest/java/uk/golbourn/noice/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/c/: CMakeLists.txt  native-lib.c
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/uk/golbourn/noice/: AudioService.java  CardConfig.java  MainActivity.java  MainFragment.java  NotificationActionReceiver.java
app/src/main/java/uk/golbourn/noice/ui/main/: AudioService.java  CardConfig.java  CardModel.java  MainFragment.java  MainViewModel.java
app/src/main/res/drawable/: air.xml  brook.xml  calm.xml  car.xml  city.xml  fan.xml  fire.xml  forest.xml  ic_launcher_foreground.xml  mute.xml  notification.xml  pause.xml  people.xml  play.xml  radio.xml  rain.xml  train.xml  waves.xml  waves2.xml  wind.xml  woods.xml
app/src/main/res/layout/: fragment_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/uk/golbourn/noice/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
